Finished category/priority featuers. Added view for ticket. Edited notifications

--- a/TicketSystemWeb/Views/Home/Index.cshtml
+++ b/TicketSystemWeb/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welkom</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu dui tempor, sagittis libero nec, ullamcorper ligula. Fusce vitae urna libero. Donec malesuada pellentesque orci nec venenatis. Duis commodo velit eget nibh sodales, vel faucibus diam pulvinar. Proin iaculis ipsum vel dui pretium tempus. Nunc porta placerat mauris faucibus vulputate. Curabitur mollis risus ac libero vehicula lacinia. Nunc hendrerit bibendum quam ac accumsan.</p>
+    <a asp-controller="Ticket" asp-action="Index" class="btn btn-success">Ga naar overzicht van tickets</a>
 </div>
