--- a/TicketSystemWeb/Views/Ticket/View.cshtml
+++ b/TicketSystemWeb/Views/Ticket/View.cshtml
@@ -1,26 +1,24 @@
 ﻿@model Ticket
 
-<form method="post">
+<form method="post" asp-action="Delete">
+    <input asp-for="ticketId" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Ticket bewerken</h2>
+            <h2 class="text-primary">Ticket</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label asp-for="ticketSubject">Onderwerp</label>
-            <input asp-for="ticketSubject" class="form-control" />
-            <span asp-validation-for="ticketSubject" class="text-danger"></span>
+            <input asp-for="ticketSubject" disabled class="form-control" />
         </div>
         <div class="mb-3">
-            <label asp-for="ticketContent">Probleemomschrijving</label>
-            <textarea asp-for="ticketContent" class="form-control" rows="7"></textarea>
-            <span asp-validation-for="ticketContent" class="text-danger"></span>
+            <textarea asp-for="ticketContent" disabled class="form-control" rows="7"></textarea>
         </div>
         <div class="row">
             <span asp-validation-for="ticketCategory">Categorie</span>
             <div class="col-sm-3">
-                <select asp-for="ticketCategory" asp-validation-for="ticketCategory" class="form-control">
+                <select asp-for="ticketCategory" asp-validation-for="ticketCategory" class="form-control" disabled>
                     <option value="0">Windows</option>
                     <option value="1">macOS</option>
                     <option value="2">Printer</option>
@@ -32,7 +30,7 @@
         <div class="row">
             <span asp-validation-for="ticketCategory">Prioriteit</span>
             <div class="col-sm-3">
-                <select asp-for="ticketPriority" asp-validation-for="ticketPriority" class="form-control">
+                <select asp-for="ticketPriority" asp-validation-for="ticketPriority" class="form-control" disabled>
                     <option value="0">Laag</option>
                     <option value="1">Gemiddeld</option>
                     <option value="2">Hoog</option>
@@ -41,8 +39,7 @@
             </div>
         </div>
         <br />
-        <button type="submit" class="btn btn-primary" style="width: 150px">Ticket bewerken</button>
-        <a asp-controller="Ticket" asp-action="Index" class="btn btn-secondary" style="width: 150px">Terug naar overzicht</a>
+        <a asp-controller="Ticket" asp-action="Index" class="btn btn-primary" style="width: 150px">Terug naar overzicht</a>
     </div>
 </form>
 
