--- a/TicketSystemWeb/Views/Ticket/Edit.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Edit.cshtml
@@ -40,6 +40,22 @@
                 </select>
             </div>
         </div>
+        <div class="row">
+            <span asp-validation-for="ticketCategory">Status</span>
+            <div class="col-sm-3">
+                <select asp-for="ticketStatus" class="form-control">
+@*                    @{
+                        int i = 0;
+                    }
+                    @foreach (var status in ViewBag.ticketStatusList)
+                    {
+                        i++;
+                        <option value="i">@status</option>
+                    }*@
+                    <option value="0">Placeholder</option>
+                </select>
+            </div>
+        </div>
         <br />
         <button type="submit" class="btn btn-primary" style="width: 150px">Ticket bewerken</button>
         <a asp-controller="Ticket" asp-action="Index" class="btn btn-secondary" style="width: 150px">Terug naar overzicht</a>
