--- a/TicketSystemWeb/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/TicketSystemWeb/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,3 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
