--- a/TicketSystemWeb/Views/Ticket/Create.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Create.cshtml
@@ -1,4 +1,29 @@
-﻿@model Ticket
+﻿@using static TicketSystemWeb.Models.Ticket
+@model Ticket
+
+@{
+    ViewData["Title"] = "Ticket aanmaken";
+}
+
+<form method="post" asp-action="CreateReply">
+    <div class="border p-3 mt-4">
+        <div class="row pb-2">
+            <h2 class="text-secondary">Apparaten toevoegen</h2>
+            <p>Voeg minstens 1 apparaat toe</p>
+            <hr />
+        </div>
+        <div class="mb-3">
+            <label asp-for="ticketSubject">Voeg apparaat 1 toe (*)</label>
+            <input asp-for="ticketContent" class="form-control" rows="2">
+            <br />
+            <label asp-for="ticketSubject">Voeg apparaat 2 toe</label>
+            <input asp-for="ticketContent" class="form-control" rows="2">
+            <textarea asp-for="ticketId" class="form-control" rows="7" hidden></textarea>
+            <br />
+            <button type="submit" class="btn btn-primary" style="width: 150px">Apparaten toevoegen</button>
+        </div>
+    </div>
+</form>
 
 <form method="post">
     <div class="border p-3 mt-4">
@@ -18,26 +43,22 @@
             <span asp-validation-for="ticketContent" class="text-danger"></span>
         </div>
         <div class="row">
-            <span asp-validation-for="ticketCategory">Categorie</span>
+            <span asp-for="ticketCategory">Categorie</span>
             <div class="col-sm-3">
-                <select asp-for="ticketCategory" asp-validation-for="ticketCategory" class="form-control">
-                    <option value="0">Windows</option>
-                    <option value="1">macOS</option>
-                    <option value="2">Printer</option>
-                    <option value="3">Interne systemen</option>
+                <select asp-for="ticketCategory" asp-items="Html.GetEnumSelectList<ticketCategories>()" class="form-control">
+                    <option selected="selected" value="">Kies een categorie</option>
                 </select>
+                <span asp-validation-for="ticketCategory" class="text-danger"></span>
             </div>
         </div>
         <br />
         <div class="row">
-            <span asp-validation-for="ticketCategory">Prioriteit</span>
+            <span asp-for="ticketPriority">Prioriteit</span>
             <div class="col-sm-3">
-                <select asp-for="ticketPriority" asp-validation-for="ticketPriority" class="form-control">
-                    <option value="0">Laag</option>
-                    <option value="1">Gemiddeld</option>
-                    <option value="2">Hoog</option>
-                    <option value="3">Kritiek</option>
+                <select asp-for="ticketPriority" asp-items="Html.GetEnumSelectList<ticketPriorities>()" class="form-control">
+                    <option selected="selected" value="">Kies een prioriteit</option>
                 </select>
+                <span asp-validation-for="ticketPriority" class="text-danger"></span>
             </div>
         </div>
     </div>
