Added model, controller and CRUD for devices. Improvements, bugfixes.

--- a/TicketSystemWeb/Views/Shared/_Layout.cshtml
+++ b/TicketSystemWeb/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Ticket" asp-action="Index">Apparaten</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Device" asp-action="Index">Apparaten</a>
 
                         </li>
                         <li class="nav-item">
