--- a/TicketSystemWeb/Views/Ticket/Index.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="row pt-4">
         <div class="col-6">
             <h2 class="text-primary">Ticketlijst</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus faucibus scelerisque arcu ut lobortis. Nulla venenatis finibus mattis. Praesent tempus, arcu quis dictum aliquam, lectus libero egestas mauris, in sodales justo enim id dolor. Ut lobortis, ante in efficitur aliquet, felis augue iaculis nisl, sed viverra massa lectus at sem.</p>
+            <p>Zie, maak, bewerk of verwijder tickets.</p>
         </div>
         <div class="col-6 text-end">
             <a asp-controller="Ticket" asp-action="Create" class="btn btn-primary">
