Started implementation of 3-layer architecture. Improvements

--- a/TicketSystemWeb/Views/Device/Create.cshtml
+++ b/TicketSystemWeb/Views/Device/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Device
+﻿@model DeviceViewModel
 
 @{
     ViewData["Title"] = "Apparaat toevoegen";
@@ -12,17 +12,19 @@
             <hr />
         </div>
         <div class="mb-3">
-            <label asp-for="deviceName">Apparaatnaam (*)</label>
-            <input asp-for="deviceName" class="form-control" rows="2">
-            <label asp-for="brand">Merk (*)</label>
-            <input asp-for="brand" class="form-control" rows="2">
-            <span asp-validation-for="deviceName" class="text-danger"></span>
-            <label asp-for="serialNumber">Serienummer</label>
-            <input asp-for="serialNumber" class="form-control" rows="2">
-            <span asp-validation-for="deviceName" class="text-danger"></span>
-            <label asp-for="osVersion">OS</label>
-            <input asp-for="osVersion" class="form-control" rows="2">
-            <span asp-validation-for="deviceName" class="text-danger"></span>
+            <label asp-for="DeviceName">Apparaatnaam (*)</label>
+            <input asp-for="DeviceName" class="form-control" rows="2">
+            <label asp-for="Brand">Merk (*)</label>
+            <input asp-for="Brand" class="form-control" rows="2">
+            <label asp-for="DeviceVersion">Versie (*)</label>
+            <input asp-for="DeviceVersion" class="form-control" rows="2">
+            <span asp-validation-for="DeviceName" class="text-danger"></span>
+            <label asp-for="SerialNumber">Serienummer</label>
+            <input asp-for="SerialNumber" class="form-control" rows="2">
+            <span asp-validation-for="DeviceName" class="text-danger"></span>
+            <label asp-for="OsVersion">OS</label>
+            <input asp-for="OsVersion" class="form-control" rows="2">
+            <span asp-validation-for="DeviceName" class="text-danger"></span>
             <br />
 
             <button type="submit" class="btn btn-primary" style="width: 150px">Apparaat toevoegen</button>
