--- a/TicketSystemWeb/Views/Device/Index.cshtml
+++ b/TicketSystemWeb/Views/Device/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Device>
+﻿@model IEnumerable<DeviceViewModel>
 
 @{
     ViewData["Title"] = "Devices";
@@ -46,24 +46,24 @@
         {
             <tr>
                 <td width="50%">
-                    @obj.deviceName
+                    @obj.DeviceName
                 </td>
                 <td width="50%">
-                    @obj.brand
+                    @obj.Brand
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Device" asp-action="View" asp-route-deviceId="@obj.deviceId" class="btn btn-primary"><i class="bi bi-eye-fill"></i>Details</a>
+                        <a asp-controller="Device" asp-action="View" asp-route-deviceId="@obj.DeviceId" class="btn btn-primary"><i class="bi bi-eye-fill"></i>Details</a>
                     </div>
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Device" asp-action="Edit" asp-route-deviceId="@obj.deviceId" class="btn btn-primary"><i class="bi bi-pen-fill"></i>Bewerken</a>
+                        <a asp-controller="Device" asp-action="Edit" asp-route-deviceId="@obj.DeviceId" class="btn btn-primary"><i class="bi bi-pen-fill"></i>Bewerken</a>
                     </div>
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Device" asp-action="Delete" asp-route-deviceId="@obj.deviceId" class="btn btn-primary"><i class="bi bi-trash-fill"></i>Verwijderen</a>
+                        <a asp-controller="Device" asp-action="Delete" asp-route-deviceId="@obj.DeviceId" class="btn btn-primary"><i class="bi bi-trash-fill"></i>Verwijderen</a>
                     </div>
                 </td>
             </tr>
