--- a/TicketSystemWeb/Views/Device/Edit.cshtml
+++ b/TicketSystemWeb/Views/Device/Edit.cshtml
@@ -20,6 +20,11 @@
             <span asp-validation-for="Brand" class="text-danger"></span>
         </div>
         <div class="mb-3">
+            <span asp-validation-for="DeviceVersion">Versie</span>
+            <input asp-for="DeviceVersion" class="form-control" />
+            <span asp-validation-for="DeviceVersion" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
             <span asp-validation-for="SerialNumber">Serienummer</span>
             <input asp-for="SerialNumber" class="form-control" />
             <span asp-validation-for="SerialNumber" class="text-danger"></span>
