Added edit/delete features for devices. Improvements

--- a/TicketSystemWeb/Views/Device/Edit.cshtml
+++ b/TicketSystemWeb/Views/Device/Edit.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Apparaat bewerken";
 }
 <form method="post">
+    <input asp-for="DeviceId" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">Apparaat bewerken</h2>
