Deleted DataContext, Migrations. Added feature to retrieve specific device. Code improvements.

--- a/TicketSystemWeb/Views/Device/Create.cshtml
+++ b/TicketSystemWeb/Views/Device/Create.cshtml
@@ -7,8 +7,7 @@
 <form method="post" asp-action="Create">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-secondary">Apparaten toevoegen</h2>
-            <p>Voeg minstens 1 apparaat toe</p>
+            <h2 class="text-secondary">Apparaat toevoegen</h2>
             <hr />
         </div>
         <div class="mb-3">
